Agregacion de nav con lorem

--- a/inicio.html
+++ b/inicio.html
@@ -34,7 +34,14 @@
         </nav>
     </center>
     <br>
-
+<nav>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi a cupiditate debitis. Officia dolorem eaque nemo inventore quod, culpa soluta voluptatem adipisci natus! Reiciendis doloribus qui adipisci, minus vero error!
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi a cupiditate debitis. Officia dolorem eaque nemo inventore quod, culpa soluta voluptatem adipisci natus! Reiciendis doloribus qui adipisci, minus vero error!
+    </p>
+</nav>
     <header class="BOTON" align='center'>
         <button><a href="inccio2.html"> PAGINA 2 </a></button>
         <button><a href="inccio2.html"> CATALAGO </a></button>
